# auv-experiments

./: README.md  arduino_node.cpp
action_servers/: CMakeLists.txt  package.xml
action_servers/include/: angle_PID_server.h  forward_PID_server.h  line.h  move_forward_server.h  move_sideward_server.h  sideward_PID_server.h  single_buoy.h  straight_server.h  targetManager.h  upward_PID_server.h
action_servers/src/: angle_PID_server.cpp  forward_client.cpp  master.cpp  motion_server.cpp  sideward_client.cpp  simple_client.cpp  single_buoy.cpp  straight_server.cpp  targetManager.cpp
buoy_processing/: CMakeLists.txt  README.md  package.xml
buoy_processing/cfg/: buoy_config.yaml
buoy_processing/launch/: buoy_processing.launch
buoy_processing/src/: buoy_processing.cpp
forward_yaw/: CMakeLists.txt  package.xml
forward_yaw/firmware/: arduino.ino
forward_yaw/firmware/arduino/: arduino.ino
forward_yaw/src/: forward_cmd.cpp  forward_yaw.cpp
hardware_camera/: CMakeLists.txt  README.md  package.xml
hardware_camera/launch/: cam_microsoft.launch
lumen_led/: CMakeLists.txt  package.xml
lumen_led/src/: arduino_node.cpp
motion_sideward/: CMakeLists.txt
motion_sideward/src/: sideward.cpp  sideward_cmd.cpp  sideward_yaw.cpp
motion_turn/src/: turningXYTest.cpp
sideward_yaw/: CMakeLists.txt  package.xml
sideward_yaw/src/: sideward_cmd.cpp  sideward_yaw.cpp
src/: arduino.cc
task_buoy/: CMakeLists.txt  package.xml
task_buoy/include/: .errorToPWM.h.swp  errorToPWM.h
task_buoy/src/: .errorToPWM.cpp.swp  .main.cpp.swp  errorToPWM.cpp  main.cpp
task_gate/: CMakeLists.txt  package.xml
task_gate/src/: main.cpp  task_gate.cpp
task_line/: .package.xml.swp  CMakeLists.txt  package.xml
task_line/src/: errorToPWM.cpp  main.cpp
task_torpedo/: CMakeLists.txt  package.xml
task_torpedo/include/: errorToPWM.h
task_torpedo/src/: errorToPWM.cpp  main.cpp
vision_buoy/: CMakeLists.txt  package.xml
vision_buoy/cfg/: buoy.cfg
vision_buoy/include/: pre_processing.h
vision_buoy/msg/: buoy_pos.msg
vision_buoy/src/: buoy_detection.cpp  new_buoy.cpp  normal_buoy.cpp  pre_processing.cpp
vision_commons/src/: .blue_filter.cpp.swp  blue_filter.cpp
vision_gate/: CMakeLists.txt  package.xml
vision_gate/cfg/: gate.cfg
vision_gate/src/: gate_detection.cpp
vision_line/: CMakeLists.txt  package.xml
vision_line/cfg/: line.cfg
vision_line/src/: line_angle.cpp  line_centralize.cpp  line_detection.cpp
